--- a/instagram/templates/general/register.html
+++ b/instagram/templates/general/register.html
@@ -1,4 +1,7 @@
 {% extends "general/layout.html" %}
+{% load crispy_forms_tags %}
+
+
 
 {% block head_title %}Registro{% endblock %}
 
@@ -6,5 +9,13 @@
     <div class="container">
         <h1>Registrate</h1>
         <p>Esta es la página de Registro</p>
+        {% csrf_token %}
+        <form action="">
+            {{ form.first_name|as_crispy_field }}
+            {{ form.username|as_crispy_field }}
+            {{ form.email|as_crispy_field }}
+            {{ form.password|as_crispy_field }}
+            <button type="submit" class="btn btn-primary">Registrarse</button>
+        </form>
     </div>
 {% endblock %}
