Formulario de registro, login y logout creados

--- a/instagram/templates/general/contact.html
+++ b/instagram/templates/general/contact.html
@@ -4,6 +4,7 @@
 
 {% block page_content %}
     <div class="container">
+        {% include "_includes/_messages.html" %} 
         <h1>Contacta</h1>
         <p>Esta es la página de contacto</p>
     </div>
