--- a/instagram/templates/general/register.html
+++ b/instagram/templates/general/register.html
@@ -1,21 +1,24 @@
 {% extends "general/layout.html" %}
 {% load crispy_forms_tags %}
 
-
-
 {% block head_title %}Registro{% endblock %}
 
 {% block page_content %}
     <div class="container">
+        {% include "_includes/_messages.html" %} 
         <h1>Registrate</h1>
-        <p>Esta es la página de Registro</p>
-        {% csrf_token %}
-        <form action="">
-            {{ form.first_name|as_crispy_field }}
-            {{ form.username|as_crispy_field }}
-            {{ form.email|as_crispy_field }}
-            {{ form.password|as_crispy_field }}
-            <button type="submit" class="btn btn-primary">Registrarse</button>
+        
+        <form method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                  {{ form.first_name|as_crispy_field }}
+                  {{ form.username|as_crispy_field }}
+                  {{ form.email|as_crispy_field }}
+                  {{ form.password|as_crispy_field }}
+                </div>
+              </div>
+            <button type="submit">Enviar</button>
         </form>
     </div>
 {% endblock %}
