--- a/instagram/templates/general/home.html
+++ b/instagram/templates/general/home.html
@@ -4,6 +4,7 @@
 
 {% block page_content %}
     <div class="container">
+        {% include "_includes/_messages.html" %} 
         <h1>Bienvenido a Instagram Clone</h1>
         <p>Esta es la página de inicio</p>
     </div>
