--- a/instagram/templates/general/legal.html
+++ b/instagram/templates/general/legal.html
@@ -4,6 +4,7 @@
 
 {% block page_content %}
     <div class="container">
+        {% include "_includes/_messages.html" %} 
         <h1>Aviso Legal</h1>
         <p>Esta es la página de Aviso Legal</p>
     </div>
