--- a/instagram/templates/general/home.html
+++ b/instagram/templates/general/home.html
@@ -5,7 +5,15 @@
 {% block page_content %}
     <div class="container">
         {% include "_includes/_messages.html" %} 
+
+        <h1>Homepage</h1>
         <h1>Bienvenido a Instagram Clone</h1>
-        <p>Esta es la página de inicio</p>
+        <section>
+            <h2>Últimas publicaciones</h2>
+            {% for post in last_posts  %}
+                {% include "_includes/posts/_post.html" %}
+                <hr class="hr"/>
+            {% endfor %}
+        </section>
     </div>
 {% endblock %}
