--- a/instagram/templates/general/home.html
+++ b/instagram/templates/general/home.html
@@ -10,10 +10,14 @@
         <h1>Bienvenido a Instagram Clone</h1>
         <section>
             <h2>Últimas publicaciones</h2>
-            {% for post in last_posts  %}
-                {% include "_includes/posts/_post.html" %}
-                <hr class="hr"/>
-            {% endfor %}
+
+            <div class="row">
+                {% for post in last_posts  %}
+                <div class="col-12 col-sm-6 col-md-4 h-100 d-flex">
+                        {% include "_includes/posts/_post.html" %}
+                    </div>
+                {% endfor %}
+            </div>
         </section>
     </div>
 {% endblock %}
