--- a/instagram/templates/general/profile_detail.html
+++ b/instagram/templates/general/profile_detail.html
@@ -5,7 +5,7 @@
 {% block page_content %}
     <div class="container">
         {% include "_includes/_messages.html" %} 
-        <h1>Mi Perfil</h1>
+        <h1>Perfil de {{ profile.user }}</h1>
         <p>Biografía: {{ profile.bio|default_if_none:'Sin rellenar' }}</p>
         <p>Fecha de nacimiento: {{ profile.birth_date|default_if_none:'Sin rellenar' }}</p>
         <p>
@@ -18,12 +18,30 @@
             </div>   
         </p>
         <p>Seguidores: {{ profile.followers.count }}</p>
-        <p><a href="{% url 'profile_update' profile.pk %}">Editar</a></p>
+        <p>Seguidos: {{ profile.followers.count }}</p>
+        {% if profile not in request.user.profile.follower_set.all %}
+            <p>No lo estoy siguiendo</p>
+            <p>
+                <form action="">
+                    
+                </form>
+                
+                <button>Seguir</button>
+            </p>
+        {% endif %}
+        {% if profile.user == request.user  %}
+            <p><a href="{% url 'profile_update' profile.pk %}">Editar</a></p>
+        {% endif %}
+       
         <section>
-            {% for post in profile.user.posts.all %}
-                {% include "_includes/posts/_post.html" %}
-                <hr class="hr"/>
-            {% endfor %}
+            <h2>Publicaciones</h2>
+            <div class="row">
+                {% for post in profile.user.posts.all %}
+                    <div class="col-12 col-sm-6 col-md-4">
+                        {% include "_includes/posts/_post.html" %}
+                    </div>
+                {% endfor %}
+            </div>
         </section> 
     </div>
 {% endblock %}
