--- a/instagram/templates/_includes/posts/_post.html
+++ b/instagram/templates/_includes/posts/_post.html
@@ -1,9 +1,12 @@
+
 <article>
     <div class="bg-white border mt-2">
         <div>
             <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
                 <div class="d-flex flex-row align-items-center feed-text px-2">
-                    <img class="rounded-circle" src="{{ post.user.profile.profile_picture.url }}" width="45">
+                    <div class="rounded-circle">
+                        <img src="{{ post.user.profile.profile_picture.url }}" class="profile-img" alt="Imagen de perfil">
+                    </div>
                     <div class="d-flex flex-column flex-wrap ml-2">
                         <span class="font-weight-bold">{{ post.user }}</span>
                         <span class="text-black-50 time">{{ post.created_at }}</span>
@@ -12,11 +15,42 @@
                 <div class="feed-icon px-2"><i class="fa fa-ellipsis-v text-black-50"></i></div>
             </div>
         </div>
-        <div class="p-2 px-3"><span>{{ post.caption }}</span></div>
         <div class="feed-image p-2 px-3">
             <img class="img-fluid img-responsive" src="{{ post.image.url }}">
-        </div>
-        <div class="d-flex justify-content-end socials p-2 py-3">
-        </div>
+       <footer>
+            <div class="text-center">
+                {% if request.user.is_authenticated %}
+                    <p>
+                        <a class="likeButton" href="{% url 'post_like_ajax' post.pk %}">
+                            <span>{{ post.likes.all.count }}</span>  
+                            {% if request.user in post.likes.all %}                 
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16" color="black">
+                                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                    </svg>
+                            {% else %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16" color="black">
+                                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                                    </svg>
+                            {% endif %}
+                        </a>    
+                    </p>
+                    <p>
+                        {{ post.comments.all.count }} 
+                        <svg 
+                        xmlns="http://www.w3.org/2000/svg" 
+                        width="16" height="16" 
+                        fill="currentColor" 
+                        class="bi bi-chat-dots" 
+                        viewBox="0 0 16 16">
+                            <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/><path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9 9 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.4 10.4 0 0 1-.524 2.318l-.003.011a11 11 0 0 1-.244.637c-.079.186.074.394.273.362a22 22 0 0 0 .693-.125m.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6-3.004 6-7 6a8 8 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a11 11 0 0 0 .398-2"/>
+                        </svg>
+                    </p>
+                {% endif %}
+            </div>
+            <p class="text-center mt-3 mb-3">
+                <a href="{% url 'post_detail' post.pk %}" class="btn btn-primary btn-sm" role="button" >Ver post</a>
+            </p>
+            
+       </footer>
     </div>
 </article>
