--- a/instagram/templates/general/profile_detail.html
+++ b/instagram/templates/general/profile_detail.html
@@ -3,45 +3,53 @@
 {% block head_title %}Contacto{% endblock %}
 
 {% block page_content %}
-    <div class="container">
-        {% include "_includes/_messages.html" %} 
-        <h1>Perfil de {{ profile.user }}</h1>
-        <p>Biografía: {{ profile.bio|default_if_none:'Sin rellenar' }}</p>
-        <p>Fecha de nacimiento: {{ profile.birth_date|default_if_none:'Sin rellenar' }}</p>
-        <p>
-            <div class="w-50">
-                {% if profile.profile_picture %}
-                <img width="100px" src="{{ profile.profile_picture.url }}" alt="Imagen" class="img-fluid">
-                {% else %}
-                No dispone de foto de perfil
-                {% endif %}
-            </div>   
-        </p>
-        <p>Seguidores: {{ profile.followers.count }}</p>
-        <p>Seguidos: {{ profile.followers.count }}</p>
-        {% if profile not in request.user.profile.follower_set.all %}
-            <p>No lo estoy siguiendo</p>
-            <p>
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form.profile_pk|as_crispy_field }}
-                    <button>Seguir</button>
-                </form>
-            </p>
-        {% endif %}
-        {% if profile.user == request.user  %}
-            <p><a href="{% url 'profile_update' profile.pk %}">Editar</a></p>
-        {% endif %}
-       
-        <section>
-            <h2>Publicaciones</h2>
-            <div class="row">
-                {% for post in profile.user.posts.all %}
-                    <div class="col-12 col-sm-6 col-md-4">
-                        {% include "_includes/posts/_post.html" %}
-                    </div>
-                {% endfor %}
-            </div>
-        </section> 
-    </div>
+<div class="container">
+    {% include "_includes/_messages.html" %} 
+    <h1>Perfil de {{ profile.user }}</h1>
+    <p>Biografía: {{ profile.bio|default_if_none:'Sin rellenar' }}</p>
+    <p>Fecha de nacimiento: {{ profile.birth_date|default_if_none:'Sin rellenar' }}</p>
+    <p>
+        <div class="w-50">
+            {% if profile.profile_picture %}
+            <img width="100px" src="{{ profile.profile_picture.url }}" alt="Imagen" class="img-fluid">
+            {% else %}
+            No dispone de foto de perfil
+            {% endif %}
+        </div>   
+    </p>
+    <p>Seguidores: {{ profile.followers.count }}</p>
+    <p>Seguidos: {{ profile.followers.count }}</p>
+
+
+
+
+    {% if profile.user != request.user %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.profile_pk|as_crispy_field }}
+            {% if following %}
+                <button type="submit">Dejar de seguir</button>
+            {% else %}
+                <button type="submit">Seguir</button>
+            {% endif %}
+    </form>  
+    {% endif %}
+
+
+
+    {% if profile.user == request.user  %}
+        <p><a href="{% url 'profile_update' profile.pk %}">Editar</a></p>
+    {% endif %}
+    
+    <section>
+        <h2>Publicaciones</h2>
+        <div class="row">
+            {% for post in profile.user.posts.all %}
+                <div class="col-12 col-sm-6 col-md-4">
+                    {% include "_includes/posts/_post.html" %}
+                </div>
+            {% endfor %}
+        </div>
+    </section> 
+</div>
 {% endblock %}
